// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Detail should display error banner when getMockById call fails 1`] = `
<div>
  <div
    class="flex flex-col justify-start align-middle w-full px-9 mt-4 mb-2"
    data-testid="detail-container"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-xilmwd-MuiPaper-root-MuiAlert-root"
      data-testid="fetch-mock-details-error"
      role="alert"
      style="margin-top: 2rem; width: 90%; margin-left: auto; margin-right: auto; padding: 1rem;"
    >
      <div
        class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
          data-testid="ErrorOutlineIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <div
        class="MuiAlert-message css-acap47-MuiAlert-message"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
        >
          Failed to fetch mock details.
        </div>
        <strong>
          Please try again
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`Detail should display error when path is invalid 1`] = `
<div>
  <div
    class="flex flex-col justify-start align-middle w-full px-9 mt-4 mb-2"
    data-testid="detail-container"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-xilmwd-MuiPaper-root-MuiAlert-root"
      data-testid="fetch-mock-details-error"
      role="alert"
      style="margin-top: 2rem; width: 90%; margin-left: auto; margin-right: auto; padding: 1rem;"
    >
      <div
        class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
          data-testid="ErrorOutlineIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <div
        class="MuiAlert-message css-acap47-MuiAlert-message"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
        >
          Failed to fetch mock details.
        </div>
        <strong>
          Please try again
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`Detail should hide toolbar when getting user details fail 1`] = `
<div>
  <div
    class="flex flex-col justify-start align-middle w-full px-9 mt-4 mb-2"
    data-testid="detail-container"
  >
    <div
      class="flex flex-row justify-between align-middle w-full mt-4 mb-2"
      data-testid="detail-toolbar-container"
    />
    <div
      class="w-full flex flex-row align-middle border-2 border-gray-100 shadow-sm rounded-sm px-4 py-2 mx-auto my-4 overflow-hidden"
      data-testid="detail-header-container"
    >
      <div
        class="w-3/6 flex flex-col justify-start align-middle"
        data-testid="title-container"
      >
        <p
          class="text-2xl capitalize truncate my-2"
          data-testid="mock-title"
        >
          Test mock
        </p>
        <p
          class="text-base font-light capitalize truncate mt-1 mb-2"
          data-testid="mock-subtitle"
        >
          Test mock
        </p>
        <div
          class="text-base text-center text-black truncate font-light my-1"
          data-testid="mock-link"
        >
          <div
            class="flex items-center justify-start text-teal-500"
          >
            <div
              class="text-xl w-10 min-w-10 max-w-10 p-0"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                />
              </svg>
            </div>
            <a
              class="text-black hover:text-blue-500 mx-1 cursor-pointer max-w-1/2 min-w-1/4 text-left truncate"
              href="undefined/test1?q=ship"
              target="_blank"
            >
              /test1
            </a>
            <div
              class="ml-2 mt-1"
            >
              <button
                aria-label="Copy URL"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="copy-url-button"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-2xl text-slate-600"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-3/6 flex flex-row justify-end align-middle"
        data-testid="meta-container"
      >
        <div
          class="w-3/6 flex flex-col justify-center align-middle"
        >
          <div
            class="text-center px-2 py-1 rounded-md shadow-sm select-none my-2 mx-auto border-2 border-blue-500 text-blue-500"
            data-testid="mock-badge"
          >
            GET
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-start align-middle w-full mt-4 mb-2"
      data-testid="detail-content-viewer-section"
    >
      <ul
        class="nav nav-tabs flex flex-col md:flex-row flex-wrap list-none pl-0 mb-4"
      >
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-teal-500 text-white"
            data-testid="general-pane"
            id="general-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              />
            </svg>
             
            General
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="request-pane"
            id="request-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm143.6 28.9l72.4-75.5V392c0 13.3 10.7 24 24 24h16c13.3 0 24-10.7 24-24V209.4l72.4 75.5c9.3 9.7 24.8 9.9 34.3.4l10.9-11c9.4-9.4 9.4-24.6 0-33.9L273 107.7c-9.4-9.4-24.6-9.4-33.9 0L106.3 240.4c-9.4 9.4-9.4 24.6 0 33.9l10.9 11c9.6 9.5 25.1 9.3 34.4-.4z"
              />
            </svg>
             
            Request
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="response-pane"
            id="response-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zm-143.6-28.9L288 302.6V120c0-13.3-10.7-24-24-24h-16c-13.3 0-24 10.7-24 24v182.6l-72.4-75.5c-9.3-9.7-24.8-9.9-34.3-.4l-10.9 11c-9.4 9.4-9.4 24.6 0 33.9L239 404.3c9.4 9.4 24.6 9.4 33.9 0l132.7-132.7c9.4-9.4 9.4-24.6 0-33.9l-10.9-11c-9.5-9.5-25-9.3-34.3.4z"
              />
            </svg>
            Response
          </div>
        </li>
      </ul>
      <div
        class="tab-content font-light shadow-sm rounded-sm mt-2 mb-4 px-4 py-2 border-2 border-gray-100"
        data-testid="tab-content-container"
      >
        <div
          class="grid grid-cols-2 gap-6 fade px-4 py-2 my-2"
          data-testid="general-nav-tab-pane"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Unique Identifier
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-id"
              disabled=""
              readonly=""
              type="text"
              value="4708bf6f-8122-4ca5-915f-1b098aa362b8"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Name
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-name"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Description
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-description"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Status
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-entity-status"
              disabled=""
              readonly=""
              type="text"
              value="NONE"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              HTTP Method
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-http-method"
              disabled=""
              readonly=""
              type="text"
              value="GET"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Route
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-route"
              disabled=""
              readonly=""
              type="text"
              value="/test1"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Query Params
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-query-params"
              disabled=""
              readonly=""
              type="text"
              value="q=ship"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Expected Status Code
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-status-code"
              disabled=""
              readonly=""
              type="text"
              value="200"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-03T22:31:32.911138+05:30"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-07T21:19:41.046908+05:30"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Detail should render ARCHIVED mock details 1`] = `
<div>
  <div
    class="flex flex-col justify-start align-middle w-full px-9 mt-4 mb-2"
    data-testid="detail-container"
  >
    <div
      class="flex flex-row justify-between align-middle w-full mt-4 mb-2"
      data-testid="detail-toolbar-container"
    >
      <div
        class="inline-flex items-center justify-between"
        data-testid="operations-container"
      >
        <div
          class="cursor-pointer px-2 py-2 mx-1 hover:bg-gray-100"
          data-testid="unarchive-btn"
          id="unarchive-btn"
        >
          <span
            class="inline-flex items-center justify-between gap-2 text-lg text-gray-600"
          >
            <svg
              class="text-2xl text-gray-600"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M20.55 5.22l-1.39-1.68A1.51 1.51 0 0018 3H6c-.47 0-.88.21-1.15.55L3.46 5.22C3.17 5.57 3 6.01 3 6.5V19a2 2 0 002 2h14c1.1 0 2-.9 2-2V6.5c0-.49-.17-.93-.45-1.28zM12 9.5l5.5 5.5H14v2h-4v-2H6.5L12 9.5zM5.12 5l.82-1h12l.93 1H5.12z"
              />
            </svg>
             
            Unarchive
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full flex flex-row align-middle border-2 border-gray-100 shadow-sm rounded-sm px-4 py-2 mx-auto my-4 overflow-hidden"
      data-testid="detail-header-container"
    >
      <span
        class="bg-amber-400 text-black text-white px-2 py-1 my-auto shadow-sm text-xs relative -top-16 -left-4"
      >
        ARCHIVED
      </span>
      <div
        class="w-3/6 flex flex-col justify-start align-middle"
        data-testid="title-container"
      >
        <p
          class="text-2xl capitalize truncate my-2"
          data-testid="mock-title"
        >
          Test mock
        </p>
        <p
          class="text-base font-light capitalize truncate mt-1 mb-2"
          data-testid="mock-subtitle"
        >
          Test mock
        </p>
        <div
          class="text-base text-center text-black truncate font-light my-1"
          data-testid="mock-link"
        >
          <div
            class="flex items-center justify-start text-teal-500"
          >
            <div
              class="text-xl w-10 min-w-10 max-w-10 p-0"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                />
              </svg>
            </div>
            <a
              class="text-black hover:text-blue-500 mx-1 cursor-pointer max-w-1/2 min-w-1/4 text-left truncate"
              href="undefined/test1?q=ship"
              target="_blank"
            >
              /test1
            </a>
            <div
              class="ml-2 mt-1"
            >
              <button
                aria-label="Copy URL"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="copy-url-button"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-2xl text-slate-600"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-3/6 flex flex-row justify-end align-middle"
        data-testid="meta-container"
      >
        <div
          class="w-3/6 flex flex-col justify-center align-middle"
        >
          <div
            class="text-center px-2 py-1 rounded-md shadow-sm select-none my-2 mx-auto border-2 border-blue-500 text-blue-500"
            data-testid="mock-badge"
          >
            GET
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-start align-middle w-full mt-4 mb-2"
      data-testid="detail-content-viewer-section"
    >
      <ul
        class="nav nav-tabs flex flex-col md:flex-row flex-wrap list-none pl-0 mb-4"
      >
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-teal-500 text-white"
            data-testid="general-pane"
            id="general-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              />
            </svg>
             
            General
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="request-pane"
            id="request-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm143.6 28.9l72.4-75.5V392c0 13.3 10.7 24 24 24h16c13.3 0 24-10.7 24-24V209.4l72.4 75.5c9.3 9.7 24.8 9.9 34.3.4l10.9-11c9.4-9.4 9.4-24.6 0-33.9L273 107.7c-9.4-9.4-24.6-9.4-33.9 0L106.3 240.4c-9.4 9.4-9.4 24.6 0 33.9l10.9 11c9.6 9.5 25.1 9.3 34.4-.4z"
              />
            </svg>
             
            Request
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="response-pane"
            id="response-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zm-143.6-28.9L288 302.6V120c0-13.3-10.7-24-24-24h-16c-13.3 0-24 10.7-24 24v182.6l-72.4-75.5c-9.3-9.7-24.8-9.9-34.3-.4l-10.9 11c-9.4 9.4-9.4 24.6 0 33.9L239 404.3c9.4 9.4 24.6 9.4 33.9 0l132.7-132.7c9.4-9.4 9.4-24.6 0-33.9l-10.9-11c-9.5-9.5-25-9.3-34.3.4z"
              />
            </svg>
            Response
          </div>
        </li>
      </ul>
      <div
        class="tab-content font-light shadow-sm rounded-sm mt-2 mb-4 px-4 py-2 border-2 border-gray-100"
        data-testid="tab-content-container"
      >
        <div
          class="grid grid-cols-2 gap-6 fade px-4 py-2 my-2"
          data-testid="general-nav-tab-pane"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Unique Identifier
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-id"
              disabled=""
              readonly=""
              type="text"
              value="4708bf6f-8122-4ca5-915f-1b098aa362b8"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Name
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-name"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Description
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-description"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Status
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-entity-status"
              disabled=""
              readonly=""
              type="text"
              value="ARCHIVED"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              HTTP Method
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-http-method"
              disabled=""
              readonly=""
              type="text"
              value="GET"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Route
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-route"
              disabled=""
              readonly=""
              type="text"
              value="/test1"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Query Params
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-query-params"
              disabled=""
              readonly=""
              type="text"
              value="q=ship"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Expected Status Code
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-status-code"
              disabled=""
              readonly=""
              type="text"
              value="200"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-03T22:31:32.911138+05:30"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-07T21:19:41.046908+05:30"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Detail should render DELETED mock details 1`] = `
<div>
  <div
    class="flex flex-col justify-start align-middle w-full px-9 mt-4 mb-2"
    data-testid="detail-container"
  >
    <div
      class="flex flex-row justify-between align-middle w-full mt-4 mb-2"
      data-testid="detail-toolbar-container"
    >
      <div
        class="inline-flex items-center justify-between"
        data-testid="operations-container"
      >
        <span
          class="inline-flex align-middle items-center gap-1"
          data-testid="warning-message-operations"
          id="warning-message-operations"
        >
          <svg
            class="text-2xl text-gray-600"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
            />
          </svg>
           
          No actions permitted. This mock resource has been already deleted.
        </span>
      </div>
    </div>
    <div
      class="w-full flex flex-row align-middle border-2 border-gray-100 shadow-sm rounded-sm px-4 py-2 mx-auto my-4 overflow-hidden"
      data-testid="detail-header-container"
    >
      <span
        class="bg-red-400 text-white px-2 py-1 my-auto shadow-sm text-xs relative -top-16 -left-4"
      >
        DELETED
      </span>
      <div
        class="w-3/6 flex flex-col justify-start align-middle"
        data-testid="title-container"
      >
        <p
          class="text-2xl capitalize truncate my-2"
          data-testid="mock-title"
        >
          Test mock
        </p>
        <p
          class="text-base font-light capitalize truncate mt-1 mb-2"
          data-testid="mock-subtitle"
        >
          Test mock
        </p>
        <div
          class="text-base text-center text-black truncate font-light my-1"
          data-testid="mock-link"
        >
          <div
            class="flex items-center justify-start text-teal-500"
          >
            <div
              class="text-xl w-10 min-w-10 max-w-10 p-0"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                />
              </svg>
            </div>
            <a
              class="text-black hover:text-blue-500 mx-1 cursor-pointer max-w-1/2 min-w-1/4 text-left truncate"
              href="undefined/test1?q=ship"
              target="_blank"
            >
              /test1
            </a>
            <div
              class="ml-2 mt-1"
            >
              <button
                aria-label="Copy URL"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="copy-url-button"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-2xl text-slate-600"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-3/6 flex flex-row justify-end align-middle"
        data-testid="meta-container"
      >
        <div
          class="w-3/6 flex flex-col justify-center align-middle"
        >
          <div
            class="text-center px-2 py-1 rounded-md shadow-sm select-none my-2 mx-auto border-2 border-blue-500 text-blue-500"
            data-testid="mock-badge"
          >
            GET
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-start align-middle w-full mt-4 mb-2"
      data-testid="detail-content-viewer-section"
    >
      <ul
        class="nav nav-tabs flex flex-col md:flex-row flex-wrap list-none pl-0 mb-4"
      >
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-teal-500 text-white"
            data-testid="general-pane"
            id="general-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              />
            </svg>
             
            General
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="request-pane"
            id="request-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm143.6 28.9l72.4-75.5V392c0 13.3 10.7 24 24 24h16c13.3 0 24-10.7 24-24V209.4l72.4 75.5c9.3 9.7 24.8 9.9 34.3.4l10.9-11c9.4-9.4 9.4-24.6 0-33.9L273 107.7c-9.4-9.4-24.6-9.4-33.9 0L106.3 240.4c-9.4 9.4-9.4 24.6 0 33.9l10.9 11c9.6 9.5 25.1 9.3 34.4-.4z"
              />
            </svg>
             
            Request
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="response-pane"
            id="response-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zm-143.6-28.9L288 302.6V120c0-13.3-10.7-24-24-24h-16c-13.3 0-24 10.7-24 24v182.6l-72.4-75.5c-9.3-9.7-24.8-9.9-34.3-.4l-10.9 11c-9.4 9.4-9.4 24.6 0 33.9L239 404.3c9.4 9.4 24.6 9.4 33.9 0l132.7-132.7c9.4-9.4 9.4-24.6 0-33.9l-10.9-11c-9.5-9.5-25-9.3-34.3.4z"
              />
            </svg>
            Response
          </div>
        </li>
      </ul>
      <div
        class="tab-content font-light shadow-sm rounded-sm mt-2 mb-4 px-4 py-2 border-2 border-gray-100"
        data-testid="tab-content-container"
      >
        <div
          class="grid grid-cols-2 gap-6 fade px-4 py-2 my-2"
          data-testid="general-nav-tab-pane"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Unique Identifier
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-id"
              disabled=""
              readonly=""
              type="text"
              value="4708bf6f-8122-4ca5-915f-1b098aa362b8"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Name
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-name"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Description
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-description"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Status
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-entity-status"
              disabled=""
              readonly=""
              type="text"
              value="DELETED"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              HTTP Method
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-http-method"
              disabled=""
              readonly=""
              type="text"
              value="GET"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Route
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-route"
              disabled=""
              readonly=""
              type="text"
              value="/test1"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Query Params
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-query-params"
              disabled=""
              readonly=""
              type="text"
              value="q=ship"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Expected Status Code
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-status-code"
              disabled=""
              readonly=""
              type="text"
              value="200"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-03T22:31:32.911138+05:30"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-07T21:19:41.046908+05:30"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Detail should render detail component for ADMIN 1`] = `
<div>
  <div
    class="flex flex-col justify-start align-middle w-full px-9 mt-4 mb-2"
    data-testid="detail-container"
  >
    <div
      class="flex flex-row justify-between align-middle w-full mt-4 mb-2"
      data-testid="detail-toolbar-container"
    >
      <div
        class="inline-flex items-center justify-between"
        data-testid="operations-container"
      >
        <div
          class="cursor-pointer px-2 py-2 mx-1 hover:bg-gray-100"
          data-testid="archive-btn"
          id="archive-btn"
        >
          <span
            class="inline-flex items-center justify-between gap-2 text-lg text-gray-600"
          >
            <svg
              class="text-2xl text-gray-600"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M20.54 5.23l-1.39-1.68C18.88 3.21 18.47 3 18 3H6c-.47 0-.88.21-1.16.55L3.46 5.23C3.17 5.57 3 6.02 3 6.5V19c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V6.5c0-.48-.17-.93-.46-1.27zM12 17.5L6.5 12H10v-2h4v2h3.5L12 17.5zM5.12 5l.81-1h12l.94 1H5.12z"
              />
            </svg>
             
            Archive
          </span>
        </div>
        <div
          class="cursor-pointer px-2 py-2 mx-1 hover:bg-gray-100"
          data-testid="delete-btn"
          id="delete-btn"
        >
          <span
            class="inline-flex items-center justify-between gap-2 text-lg text-gray-600"
          >
            <svg
              class="text-2xl text-gray-600"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
             
            Delete
          </span>
        </div>
        <div
          class="cursor-pointer px-2 py-2 mx-1 hover:bg-gray-100"
          data-testid="edit-btn"
          id="edit-btn"
        >
          <span
            class="inline-flex items-center justify-between gap-2 text-lg text-gray-600"
          >
            <svg
              class="text-2xl text-gray-600"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
             
            Edit
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full flex flex-row align-middle border-2 border-gray-100 shadow-sm rounded-sm px-4 py-2 mx-auto my-4 overflow-hidden"
      data-testid="detail-header-container"
    >
      <div
        class="w-3/6 flex flex-col justify-start align-middle"
        data-testid="title-container"
      >
        <p
          class="text-2xl capitalize truncate my-2"
          data-testid="mock-title"
        >
          Test mock
        </p>
        <p
          class="text-base font-light capitalize truncate mt-1 mb-2"
          data-testid="mock-subtitle"
        >
          Test mock
        </p>
        <div
          class="text-base text-center text-black truncate font-light my-1"
          data-testid="mock-link"
        >
          <div
            class="flex items-center justify-start text-teal-500"
          >
            <div
              class="text-xl w-10 min-w-10 max-w-10 p-0"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                />
              </svg>
            </div>
            <a
              class="text-black hover:text-blue-500 mx-1 cursor-pointer max-w-1/2 min-w-1/4 text-left truncate"
              href="undefined/test1?q=ship"
              target="_blank"
            >
              /test1
            </a>
            <div
              class="ml-2 mt-1"
            >
              <button
                aria-label="Copy URL"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="copy-url-button"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-2xl text-slate-600"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-3/6 flex flex-row justify-end align-middle"
        data-testid="meta-container"
      >
        <div
          class="w-3/6 flex flex-col justify-center align-middle"
        >
          <div
            class="text-center px-2 py-1 rounded-md shadow-sm select-none my-2 mx-auto border-2 border-blue-500 text-blue-500"
            data-testid="mock-badge"
          >
            GET
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-start align-middle w-full mt-4 mb-2"
      data-testid="detail-content-viewer-section"
    >
      <ul
        class="nav nav-tabs flex flex-col md:flex-row flex-wrap list-none pl-0 mb-4"
      >
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-teal-500 text-white"
            data-testid="general-pane"
            id="general-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              />
            </svg>
             
            General
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="request-pane"
            id="request-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm143.6 28.9l72.4-75.5V392c0 13.3 10.7 24 24 24h16c13.3 0 24-10.7 24-24V209.4l72.4 75.5c9.3 9.7 24.8 9.9 34.3.4l10.9-11c9.4-9.4 9.4-24.6 0-33.9L273 107.7c-9.4-9.4-24.6-9.4-33.9 0L106.3 240.4c-9.4 9.4-9.4 24.6 0 33.9l10.9 11c9.6 9.5 25.1 9.3 34.4-.4z"
              />
            </svg>
             
            Request
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="response-pane"
            id="response-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zm-143.6-28.9L288 302.6V120c0-13.3-10.7-24-24-24h-16c-13.3 0-24 10.7-24 24v182.6l-72.4-75.5c-9.3-9.7-24.8-9.9-34.3-.4l-10.9 11c-9.4 9.4-9.4 24.6 0 33.9L239 404.3c9.4 9.4 24.6 9.4 33.9 0l132.7-132.7c9.4-9.4 9.4-24.6 0-33.9l-10.9-11c-9.5-9.5-25-9.3-34.3.4z"
              />
            </svg>
            Response
          </div>
        </li>
      </ul>
      <div
        class="tab-content font-light shadow-sm rounded-sm mt-2 mb-4 px-4 py-2 border-2 border-gray-100"
        data-testid="tab-content-container"
      >
        <div
          class="grid grid-cols-2 gap-6 fade px-4 py-2 my-2"
          data-testid="general-nav-tab-pane"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Unique Identifier
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-id"
              disabled=""
              readonly=""
              type="text"
              value="4708bf6f-8122-4ca5-915f-1b098aa362b8"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Name
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-name"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Description
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-description"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Status
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-entity-status"
              disabled=""
              readonly=""
              type="text"
              value="NONE"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              HTTP Method
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-http-method"
              disabled=""
              readonly=""
              type="text"
              value="GET"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Route
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-route"
              disabled=""
              readonly=""
              type="text"
              value="/test1"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Query Params
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-query-params"
              disabled=""
              readonly=""
              type="text"
              value="q=ship"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Expected Status Code
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-status-code"
              disabled=""
              readonly=""
              type="text"
              value="200"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-03T22:31:32.911138+05:30"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-07T21:19:41.046908+05:30"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Detail should render detail component for VIEWER 1`] = `
<div>
  <div
    class="flex flex-col justify-start align-middle w-full px-9 mt-4 mb-2"
    data-testid="detail-container"
  >
    <div
      class="flex flex-row justify-between align-middle w-full mt-4 mb-2"
      data-testid="detail-toolbar-container"
    />
    <div
      class="w-full flex flex-row align-middle border-2 border-gray-100 shadow-sm rounded-sm px-4 py-2 mx-auto my-4 overflow-hidden"
      data-testid="detail-header-container"
    >
      <div
        class="w-3/6 flex flex-col justify-start align-middle"
        data-testid="title-container"
      >
        <p
          class="text-2xl capitalize truncate my-2"
          data-testid="mock-title"
        >
          Test mock
        </p>
        <p
          class="text-base font-light capitalize truncate mt-1 mb-2"
          data-testid="mock-subtitle"
        >
          Test mock
        </p>
        <div
          class="text-base text-center text-black truncate font-light my-1"
          data-testid="mock-link"
        >
          <div
            class="flex items-center justify-start text-teal-500"
          >
            <div
              class="text-xl w-10 min-w-10 max-w-10 p-0"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                />
              </svg>
            </div>
            <a
              class="text-black hover:text-blue-500 mx-1 cursor-pointer max-w-1/2 min-w-1/4 text-left truncate"
              href="undefined/test1"
              target="_blank"
            >
              /test1
            </a>
            <div
              class="ml-2 mt-1"
            >
              <button
                aria-label="Copy URL"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                data-testid="copy-url-button"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-2xl text-slate-600"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-3/6 flex flex-row justify-end align-middle"
        data-testid="meta-container"
      >
        <div
          class="w-3/6 flex flex-col justify-center align-middle"
        >
          <div
            class="text-center px-2 py-1 rounded-md shadow-sm select-none my-2 mx-auto border-2 border-blue-500 text-blue-500"
            data-testid="mock-badge"
          >
            GET
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-start align-middle w-full mt-4 mb-2"
      data-testid="detail-content-viewer-section"
    >
      <ul
        class="nav nav-tabs flex flex-col md:flex-row flex-wrap list-none pl-0 mb-4"
      >
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-teal-500 text-white"
            data-testid="general-pane"
            id="general-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              />
            </svg>
             
            General
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="request-pane"
            id="request-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm143.6 28.9l72.4-75.5V392c0 13.3 10.7 24 24 24h16c13.3 0 24-10.7 24-24V209.4l72.4 75.5c9.3 9.7 24.8 9.9 34.3.4l10.9-11c9.4-9.4 9.4-24.6 0-33.9L273 107.7c-9.4-9.4-24.6-9.4-33.9 0L106.3 240.4c-9.4 9.4-9.4 24.6 0 33.9l10.9 11c9.6 9.5 25.1 9.3 34.4-.4z"
              />
            </svg>
             
            Request
          </div>
        </li>
        <li
          class="nav-item flex-auto text-center"
        >
          <div
            class="inline-flex items-center justify-center align-middle gap-2 nav-link w-full block font-medium text-xs leading-tight border-2 border-transparent px-6 py-3 my-2 rounded-sm hover:bg-black hover:bg-opacity-5 hover:text-teal-500 focus:outline-none focus:ring-0 transition duration-150 ease-in-out cursor-pointer bg-white text-gray-400"
            data-testid="response-pane"
            id="response-pane"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zm-143.6-28.9L288 302.6V120c0-13.3-10.7-24-24-24h-16c-13.3 0-24 10.7-24 24v182.6l-72.4-75.5c-9.3-9.7-24.8-9.9-34.3-.4l-10.9 11c-9.4 9.4-9.4 24.6 0 33.9L239 404.3c9.4 9.4 24.6 9.4 33.9 0l132.7-132.7c9.4-9.4 9.4-24.6 0-33.9l-10.9-11c-9.5-9.5-25-9.3-34.3.4z"
              />
            </svg>
            Response
          </div>
        </li>
      </ul>
      <div
        class="tab-content font-light shadow-sm rounded-sm mt-2 mb-4 px-4 py-2 border-2 border-gray-100"
        data-testid="tab-content-container"
      >
        <div
          class="grid grid-cols-2 gap-6 fade px-4 py-2 my-2"
          data-testid="general-nav-tab-pane"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Unique Identifier
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-id"
              disabled=""
              readonly=""
              type="text"
              value="4708bf6f-8122-4ca5-915f-1b098aa362b8"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Mock Name
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-name"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Description
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-description"
              disabled=""
              readonly=""
              type="text"
              value="Test mock"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Status
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-entity-status"
              disabled=""
              readonly=""
              type="text"
              value="NONE"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              HTTP Method
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-http-method"
              disabled=""
              readonly=""
              type="text"
              value="GET"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Route
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-route"
              disabled=""
              readonly=""
              type="text"
              value="/test1"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Query Params
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-query-params"
              disabled=""
              readonly=""
              type="text"
              value="----"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Expected Status Code
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-status-code"
              disabled=""
              readonly=""
              type="text"
              value="200"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Created At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-created-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-03T22:31:32.911138+05:30"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified By
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-by"
              disabled=""
              readonly=""
              type="text"
              value="Mimock Admin"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label inline-block mb-2 text-gray-700"
            >
              Last Modified At
            </label>
            <input
              class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-gray-100 bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:outline-none"
              data-testid="mock-last-modified-at"
              disabled=""
              readonly=""
              type="text"
              value="2022-08-07T21:19:41.046908+05:30"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
